# libtest-mimic

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/: check-basic-style.sh
.github/workflows/: ci.yml
ci/: check-basic-style.sh  compile-all.sh  test-all.sh
examples/: README.md  benches.rs  many.rs  simple.rs  tidy.rs
src/: args.rs  lib.rs  pool.rs  printer.rs
tests/: all_passing.rs  main_thread.rs  mixed_bag.rs  panic.rs
tests/common/: mod.rs
