[package]
name = "libtest-mimic"
version = "0.4.1"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2021"
rust = "1.56"

description = """
Write your own test harness that looks and behaves like the built-in test \
harness used by `rustc --test`
"""
documentation = "https://docs.rs/libtest-mimic"
repository = "https://github.com/LukasKalbertodt/libtest-mimic"
license = "MIT/Apache-2.0"
keywords = ["libtest", "test", "built-in", "framework", "harness"]
categories = ["development-tools::testing", "development-tools::build-utils"]
readme = "README.md"


[dependencies]
crossbeam-channel = "0.5.4"
clap = { version = "3.1.8", features = ["derive"] }
rayon = "1.3.0"
termcolor = "1.0.5"
