[package]
name = "libtest-mimic"
version = "0.5.1"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2021"
rust-version = "1.58"

description = """
Write your own test harness that looks and behaves like the built-in test \
harness used by `rustc --test`
"""
documentation = "https://docs.rs/libtest-mimic"
repository = "https://github.com/LukasKalbertodt/libtest-mimic"
license = "MIT/Apache-2.0"
keywords = ["libtest", "test", "built-in", "framework", "harness"]
categories = ["development-tools::testing", "development-tools::build-utils"]
readme = "README.md"


[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
threadpool = "1.8.1"
termcolor = "1.0.5"

[dev-dependencies]
fastrand = "1.8.0"
pretty_assertions = "1.2.1"
